--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v5
         with:
-          name: hello-artifact
+          name: ./artifacts
 
       - name: Display content
         run: cat ./artifacts/hello.txt
