--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -26,7 +26,8 @@ jobs:
     steps:
       - uses: actions/download-artifact@v5
         with:
-          name: ./artifacts
-
+          name: ./artifacts/hello-artifact
+      - name: Display structure of downloaded files
+        run: ls -R
       - name: Display content
         run: cat ./artifacts/hello.txt
