--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -26,7 +26,8 @@ jobs:
     steps:
       - uses: actions/download-artifact@v5
         with:
-          name: ./artifacts/hello-artifact
+          name: hello-artifact
+          path: ./artifacts
       - name: Display structure of downloaded files
         run: ls -R
       - name: Display content
